<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>artbot</name>
  <version>0.0.0</version>
  <description>Metapackage for ARTBot project</description>
  <maintainer email="joeljojop@gmail.com">joel</maintainer>
  <author>Rohan Bahri</author>
  <author>Kovindh Singh</author>
  <author>Nallagatla Prudhvi</author>
  <author>Nishchay Pallav</author>
  
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>artbotsim</exec_depend>
  <exec_depend>swarm_algo</exec_depend>
  <exec_depend>canvas</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
